--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@studio-freight/react-lenis": "^0.0.47",
     "framer-motion": "^11.11.10",
+    "gsap": "^3.12.5",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18"
